--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
   <input type="hidden" name="_subject" value="New Quote Request - Licigle Cleaning">
   <input type="hidden" name="_template" value="table">
   <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://www.liciglecleaning.com/#contact">
 
             <div>
               <label for="name">Name</label>
@@ -343,6 +344,12 @@
               <label for="phone">Phone</label>
               <input id="phone" name="Phone" placeholder="Best number to reach you" required />
             </div>
+            <div>
+              <label for="email">Email</label>
+              <input id="email" type="email" name="_replyto" placeholder="your@email.com" required />
+
+            </div>
+
             <div>
               <label for="service">Service Needed</label>
               <input id="service" name="Service" placeholder="Move-out / move-in / room detailing" required />
